--- a/index.html
+++ b/index.html
@@ -381,12 +381,12 @@
                         <canvas id="postsPerHourChart"></canvas>
                     </div>
                     <div class="stat-chart">
-                        <h3><i class="fas fa-chart-pie"></i> Distribuição por Categoria</h3>
+                        <h3><i class="fas fa-chart-pie"></i> Qt. de posts per Category</h3>
                         <canvas id="categoryDistributionChart"></canvas>
                     </div>
                     <div class="stat-chart">
-                        <h3><i class="fas fa-users"></i> Top Autores</h3>
-                        <canvas id="topAuthorsChart"></canvas>
+                        <h3><i class="fas fa-users"></i> Top Apps</h3>
+                        <canvas id="topAppChart"></canvas>
                     </div>
                     <div class="stat-chart">
                         <h3><i class="fas fa-tags"></i> Tags Mais Usadas</h3>
