--- a/index.html
+++ b/index.html
@@ -189,6 +189,12 @@
 
 
             <div class="section-controls">
+              
+              <select id="sortCriteria">
+                <option value="created-desc">Mais Recentes</option>
+                <option value="payout-desc">Maior Payout</option>
+                <option value="risk-desc">Maior Risco</option>
+              </select>
 
                                 <select id="postTypeFilter">
   <option value="all">Todos os Posts</option>
